--- a/Model slides/models.tex
+++ b/Model slides/models.tex
@@ -30,7 +30,7 @@ subject to:
 1 \geq& s_{jt_1} + f_{it_2}											&	\begin{aligned} \forall (i, j) \in IP, \\
 																	\forall t_1, t_2 \in T | t_1 \leq t_2 \end{aligned} \\
 (s_{it_1} + f_{it_2} - 1) \cdot d_i \leq& \frac{s_{it_1} + f_{it_2}}{2} \cdot \sum_{t_3 = t_1}^{t_2} \omega_{it_3} 		& \forall i \in I, \forall t_1, t_2 \in T	\\
-N_{rp} \geq& \sum_{i\in I} \sum_{t_1 = t_0}^t (\rho_{ir} \cdot (s_{it_1} - f_{it_1})) 				& \forall r \in R, \forall p \in P, \forall t \in T_p 	\\
+N_{rp} \geq& \sum_{i\in I} \sum_{t_1 = t_0}^t (\rho_{ir} \cdot (s_{it_1} - f_{i(t_1-1)}))			& \forall r \in R, \forall p \in P, \forall t \in T_p 	\\
 O_p =&  \sum_{t = t_0}^{t_p} \sum_{i \in F} f_{it}									& \forall p \in P
 \end{align}
 
@@ -114,8 +114,8 @@ subject to (1):
 subject to (2):
 
 \begin{align}
-(s_{act_1} + f_{act_2} - 1) \cdot d_c \leq& \frac{s_{act_1} + f_{act_2}}{2} \cdot \sum_{t_3 = t_1}^{t_2} \omega_{ct_3} 						& 	\begin{aligned} \forall a \in A, \forall c \in C, \\																\forall t_1, t_2 \in T \end{aligned}\\
-N_{rp} \geq& \sum_{a\in A} \sum_{c\in C} \sum_{t_1 = t_0}^t (\rho_{ir} \cdot (s_{act_1} - f_{act_1})) 				& \forall r \in R, \forall p \in P, \forall t \in T_p 	\\
+(s_{act_1} + f_{act_2} - 1) \cdot d_c \leq& \frac{s_{act_1} + f_{act_2}}{2} \cdot \sum_{t_3 = t_1}^{t_2} \omega_{ct_3} 	& 	\begin{aligned} \forall a \in A, \forall c \in C, \\						\forall t_1, t_2 \in T \end{aligned}\\
+N_{rp} \geq& \sum_{a\in A} \sum_{c\in C} \sum_{t_1 = t_0}^t (\rho_{ir} \cdot (s_{act_1} - f_{ac(t_1-1)})) 		& \begin{aligned} \forall r \in R, \forall p \in P, \\ \forall t \in T_p 	\end{aligned} \\
 b_{at} >&  \sum_{c \in C} \sum_{t_1 = t - \lambda_a}^t - f_{act_1}								&	\forall a \in A, \forall t \in T 	\\
 O_t =&  |A| - \sum_{a \in A} b_{at}												&	\forall t \in T
 \end{align} }
@@ -211,7 +211,7 @@ subject to (2):
 \begin{align}
 (s_{ait_1} + f_{ait_2} - 1) \cdot d_i \leq& \frac{s_{ait_1} + f_{ait_2}}{2} \cdot \sum_{t_3 = t_1}^{t_2} \omega_{it_3} 	& 	\begin{aligned} \forall i \in \mathcal{I}, \forall a \in A, \\
 																	\forall t_1, t_2 \in T \end{aligned}\\
-N_{rp} \geq& \sum_{a\in A} \sum_{i\in \mathcal{I}} \sum_{t_1 = t_0}^t (\rho_{ir} \cdot (s_{ait_1} - f_{ait_1})) & \forall r \in R, \forall p \in P, \forall t \in T_p \\
+N_{rp} \geq& \sum_{a\in A} \sum_{i\in \mathcal{I}} \sum_{t_1 = t_0}^t (\rho_{ir} \cdot (s_{ait_1} - f_{ai(t_1-1)})) & \forall r \in R, \forall p \in P, \forall t \in T_p \\
 o_{at} \leq& \frac{1}{2} \cdot (\sum_{t_1 = t_0}^{t} f_{ai_Nt_1} + \sum_{i \in M \cup \{i_N\}} \sum_{t_2 = t - \lambda_a}^t f_{ait_2})	&	\forall a \in A, \forall t \in T \\
 O_t =& \sum_{a \in A} o_{at}													&	\forall t \in T
 \end{align} }
