Fixed Online function for installation

--- a/Model slides/models.tex
+++ b/Model slides/models.tex
@@ -81,7 +81,7 @@ Parameters:
 \item $d_i$: The duration of task $i$
 \item $\omega_{it}$: Binary parameter representing weather, 1 if task $i$ can be completed at time $t$, 0 otherwise
 \item $\rho_{ir}$: The amount of resource $r$ used by task $i$
-\item $t_p$: The final time interval (from $T$) in period $p$
+\item $t_p$: The final time interval (from $T$) before period $p$
 \end{itemize}
 \end{column}
 \end{columns}
