--- a/Model slides/models.tex
+++ b/Model slides/models.tex
@@ -29,7 +29,7 @@ subject to:
 
 \begin{align}
 s_{ait} \leq& s_{ai(t+1)}											&	\forall a \in A, \forall i \in I, \forall t \in T				\\
-s_{ai\sigma_{it_N}} \geq& 1										&	\forall a \in A, \forall i \in I				\\
+s_{ai\sigma_{it_N}} \geq& 1										&	\forall a \in A, \forall i \in I						\\
 s_{ajt} \leq& s_{ai\sigma_{it}}										&	\forall a \in A, \forall (i, j) \in IP, \forall t \in T 			\\
 N_{rp} \geq& \sum_{a \in A}\sum_{i\in I} (\rho_{ir} \cdot (s_{ait} - s_{ai\sigma_{it}}))		& 	\forall r \in R, \forall p \in P, \forall t \in T_p			\\
 O_p =&  \sum_{a \in A} s_{ai_N\sigma_{it_p}}							& 	\forall p \in P 							\\
@@ -40,7 +40,7 @@ N_{rp} \leq& m_{rp}											& 	\forall r \in R, \forall p \in P
 
 \begin{frame}{Installation Model Explanation}
 (1) Objective function, sums up profits from energy made, subtracts money used on resources (vessels), and multiplies it all with a discount factor	\\
-(2) Makes every task that is finished stay finished 	\\
+(2) Makes every task that is started stay started 	\\
 (3) Forces every task to be starded and finished by the final timestep	\\
 (4) For every precedence relation $(i, j)$, ensures that $i$ is finished before $j$ is started 	\\
 (5) Counts up the resources needed in a time period by adding the resources needed by all tasks started, and subtracting the resources needed by all tasks finished	\\
@@ -68,7 +68,7 @@ Decision variables:
 \begin{itemize}
 \item $O_{p}$: Number of online turbines after period $p$
 \item $N_{rp}$: Number of resources $r$ used in period $p$
-\item $s_{ait}$: Binary variable, 1 if task $i \in I$ for asset $a$ has started at time $t$
+\item $s_{ait}$: Binary variable, 1 if task $i \in I$ for asset $a$ has started at or before time $t$
 \end{itemize}
 \end{column}
 
@@ -95,53 +95,37 @@ Parameters:
 \footnotesize
 \begin{equation}
 	\max_{\substack{O_t, N_{rp} \in \mathbb{Z}^* \\ 
-	s_{act}, f_{act}, b_{at} \in \{0, 1\}}} 
+	s_{ait}, b_{at} \in \{0, 1\}}} 
 	\sum_{p \in P} [ DIS^p (\sum_{t\in T_p} (O_t \cdot v_t)  - \sum_{r\in R} (N_{rp} \cdot C_{rp})) ]
 \end{equation}
 
 \bigskip
 
-\only<+>{
-subject to (1):
+subject to:
 
 \begin{align}
-1 =& \sum_{t \in T} s_{act}	= \sum_{t \in T} f_{act}									&	\forall a \in A, \forall c \in C^M	\\
-1 \geq& \sum_{t \in T} s_{act}													&	\forall a \in A, \forall c \in C^O	\\
-\sum_{t \in T} s_{act}	=& \sum_{t \in T} f_{act}										&	\forall a \in A, \forall c \in C^O	
-\end{align} }
-
-\stepcounter{equation}
-\stepcounter{equation}
-\stepcounter{equation}
-
-\only<+>{
-subject to (2):
-
-\begin{align}
-(s_{act_1} + f_{act_2} - 1) \cdot d_c \leq& \frac{s_{act_1} + f_{act_2}}{2} \cdot \sum_{t_3 = t_1}^{t_2} \omega_{ct_3} 	& 	\begin{aligned} \forall a \in A, \forall c \in C, \\						\forall t_1, t_2 \in T \end{aligned}\\
-N_{rp} \geq& \sum_{a\in A} \sum_{c\in C} \sum_{t_1 = t_0}^t (\rho_{ir} \cdot (s_{act_1} - f_{ac(t_1-1)})) 		& \begin{aligned} \forall r \in R, \forall p \in P, \\ \forall t \in T_p 	\end{aligned} \\
-b_{at} >&  \sum_{c \in C} \sum_{t_1 = t - \lambda_a}^t - f_{act_1}								&	\forall a \in A, \forall t \in T 	\\
-O_t =&  |A| - \sum_{a \in A} b_{at}												&	\forall t \in T \\
-N_{rp} \leq& m_{rp}													& \forall r \in R, \forall p \in P
-\end{align} }
+s_{ait} \leq& s_{ai(t+1)}													&	\forall a \in A, \forall i \in M, \forall t \in T	\\
+s_{ai\sigma_{it_N}} \geq& 1												&	\forall a \in A, \forall i \in M^M			\\		
+N_{rp} \geq& \sum_{a\in A} \sum_{i\in M} (\rho_{ir} \cdot (s_{ait} - s_{ai\sigma{it}})) 			& 	\forall r \in R, \forall p \in P, \forall t \in T_p 	\\
+b_{at} >&  \sum_{i \in M} [s_{ai(t - \lambda_a)} - s_{ait}]								&	\forall a \in A, \forall t \in T 			\\
+O_t =&  |A| - \sum_{a \in A} b_{at}											&	\forall t \in T 						\\
+N_{rp} \leq& m_{rp}													&	 \forall r \in R, \forall p \in P
+\end{align}
 
 \end{frame}
 
 \begin{frame}{Maintenance  Model Explanation}
-\footnotesize
 (8) Objective function, sums up profits from energy made, subtracts money used on resources (vessels), and multiplies it all with a discount factor	\\
-(9) Forces every mandatory maintenance cycle to be done at some point	\\
-(10) Ensures each optional maintenance cycle to be started at most once	\\
-(11) Ensures that every maintenance cycle for a particular asset that is started is also finished	\\
-(12) Ensures that between the starting and finish times of each cycle are enough timesteps with acceptable weather	\\
-(13) Counts up the resources needed in a time period by adding the resources needed by all tasks started, and subtracting the resources needed by all tasks finished	\\
-(14) If no maintenance tasks have finished in the past $\lambda_a$ timesteps this asset is broken	\\
-(15) The number of active (online) turbines is equal to everything that isn't broken \\
-(16) Sets a limit on the amount of vessels that can be charatered in a given period
+(9) Makes every task that is finished stay finished 	\\
+(10) Forces every mandatory maintenance task to be done at some point	\\
+(11) Counts up the resources needed in a time period by adding the resources needed by all tasks started, and subtracting the resources needed by all tasks finished	\\
+(12) If no maintenance tasks have finished in the past $\lambda_a$ timesteps this asset is broken	\\
+(13) The number of active (online) turbines is equal to everything that isn't broken \\
+(14) Sets a limit on the amount of vessels that can be charatered in a given period
 \end{frame}
 
 \begin{frame}{Notation overview}
-\tiny
+\scriptsize
 
 \begin{columns}
 \begin{column}{.48\textwidth}
@@ -152,15 +136,14 @@ Sets:
 \item $T_p \in T$: All time intervals (small scale) in period $p$
 \item $R$: All resources
 \item $A$: All assets
-\item $C = C^M \cup C^O$: All (mandatory and optional) maintenance cycles
+\item $M = M^M \cup M^O$: All (mandatory and optional) maintenance tasks
 \end{itemize}
 
 Decision variables:
 \begin{itemize}
 \item $O_{t}$: Number of active turbines at timestep $t$
 \item $N_{rp}$: Number of resources $r$ used in period $p$
-\item $s_{act}$: Binary variable, 1 if maintenance cycle $c$ for asset $a$ starts at time $t$
-\item $f_{act}$: Binary variable, 1 if maintenance cycle $c$ for asset $a$ finishes at time $t$
+\item $s_{ait}$: Binary variable, 1 if maintenance task $i$ for asset $a$ has started at or before time $t$
 \item $b_{at}$: Binary variable, 1 if asset $a$ is broken at timestep $t$
 \end{itemize}
 \end{column}
@@ -173,10 +156,9 @@ Parameters:
 \item $DIS$: The discount factor per time period
 \item $v_t$: The value of energy a single turbine produces at timestep $t$
 \item $C_{rp}$: The cost of chartering resource $r$ in period $p$
-\item $d_c$: The duration per task during maintenance cycle $c$
 \item $\lambda_a$: The number of timesteps after the last maintenance before asset $a$ fails
-\item $\omega_{ct}$: Binary parameter representing weather, 1 if maintenance cycle $c$ can be completed at time $t$, 0 otherwise
-\item $\rho_{cr}$: The amount of resource $r$ used per task for maintenance cycle $c$
+\item $\sigma_{it}$: Indicates the timestep at which task $i$ should have been started for it to be finished by timestep $t$, taking into account the duration and the weather conditions
+\item $\rho_{ir}$: The amount of resource $r$ used per task for maintenance task $i$
 \item $m_{rp}$: The maximum amount of resources $r$ that can be charatered in period $p$
 \end{itemize}
 \end{column}
@@ -189,58 +171,35 @@ Parameters:
 
 \begin{equation}
 	\max_{\substack{O_t, N_{rp} \in \mathbb{Z}^* \\ 
-	s_{ait}, f_{ait}, o_{at} \in \{0, 1\}}} 
+	s_{ait}, o_{at} \in \{0, 1\}}} 
 	\sum_{p \in P} [ DIS^p (\sum_{t\in T_p} (O_t \cdot v_t)  - \sum_{r\in R} (N_{rp} \cdot C_{rp})) ]
 \end{equation}
 
 \bigskip
 
-\only<1>{
 subject to:
 
 \begin{align}
-1 =& \sum_{t \in T} s_{ait}	= \sum_{t \in T} f_{ait}								&	\forall i \in I \cup M^M, \forall a \in A				\\
-1 \geq& s_{ajt_1} + f_{ait_2}											&	\begin{aligned} \forall (i, j) \in IP, \forall a \in A, \\
-																	\forall t_1, t_2 \in T | t_1 \leq t_2 \end{aligned} \\
-1 \geq& \sum_{t \in T} s_{ait}												&	\forall a \in A, \forall i \in M^O	\\
-\sum_{t \in T} s_{ait}	=& \sum_{t \in T} f_{ait}									&	\forall a \in A, \forall i \in M^O	\\
-0 =& \sum_{t_1 = t_0}^t s_{ajt_1} + \sum_{t_2 = t}^{t_N} f_{ait_2}					&	\begin{aligned} \forall a \in A, \forall t \in T, 	\\
-																	\forall i \in I, \forall j \in M 	\end{aligned}
-\end{align} }
-
-\stepcounter{equation}
-\stepcounter{equation}
-\stepcounter{equation}
-\stepcounter{equation}
-\stepcounter{equation}
-
-\only<2>{
-subject to (2):
-
-\begin{align}
-(s_{ait_1} + f_{ait_2} - 1) \cdot d_i \leq& \frac{s_{ait_1} + f_{ait_2}}{2} \cdot \sum_{t_3 = t_1}^{t_2} \omega_{it_3} 	& 	\begin{aligned} \forall i \in \mathcal{I}, \forall a \in A, \\
-																	\forall t_1, t_2 \in T \end{aligned}\\
-N_{rp} \geq& \sum_{a\in A} \sum_{i\in \mathcal{I}} \sum_{t_1 = t_0}^t (\rho_{ir} \cdot (s_{ait_1} - f_{ai(t_1-1)})) & \forall r \in R, \forall p \in P, \forall t \in T_p \\
-o_{at} \leq& \frac{1}{2} \cdot (\sum_{t_1 = t_0}^{t} f_{ai_Nt_1} + \sum_{i \in M \cup \{i_N\}} \sum_{t_2 = t - \lambda_a}^t f_{ait_2})	&	\forall a \in A, \forall t \in T \\
-O_t =& \sum_{a \in A} o_{at}													&	\forall t \in T \\
-N_{rp} \leq& m_{rp}													& \forall r \in R, \forall p \in P
-\end{align} }
+s_{ait} \leq& s_{ai(t+1)}													&	\forall a \in A, \forall i \in \mathcal{I}, \forall t \in T		\\
+s_{ai\sigma_{it_N}} \geq& 1												&	\forall a \in A, \forall i \in I\cup M^M				\\
+s_{ajt} \leq& s_{ai\sigma_{it}}												&	\forall a \in A, \forall (i, j) \in IP, \forall t \in T 			\\
+N_{rp} \geq& \sum_{a\in A} \sum_{i\in \mathcal{I}} (\rho_{ir} \cdot (s_{ait} - s_{ai\sigma_{it}})) 		& 	\forall r \in R, \forall p \in P, \forall t \in T_p 			\\
+o_{at} \leq& \frac{1}{2} \cdot (s_{ai_Nt} + \sum_{i \in M \cup \{i_N\}} [s_{ait} - s_{ai(t-\lambda_a)}]	& 	\forall a \in A, \forall t \in T 					\\
+O_t =& \sum_{a \in A} o_{at}												& 	\forall t \in T 								\\
+N_{rp} \leq& m_{rp}													& 	\forall r \in R, \forall p \in P
+\end{align}
 
 \end{frame}
 
 \begin{frame}{Mixed Model Explanation}
-\footnotesize
-(17) Objective function, sums up profits from energy made, subtracts money used on resources (vessels), and multiplies it all with a discount factor	\\
-(18) Forces every mandatory task to be starded and finished at some point	\\
-(19) For every precedence relation $(i, j)$ it ensures that if task $i$ finishes at time $t_2$ there is no $t_1 \leq t_2$ at which task $j$ starts 	\\
-(20) Ensures each optional maintenance task to be started at most once 	\\
-(21) Ensures that every maintenance task for a particular asset that is started is also finished \\
-(22) Ensures an asset is fully installed before maintenance starts	\\
-(23) Ensures that between the starting and finish times of each task are enough timesteps with acceptable weather	\\
-(24) Counts up the resources needed in a time period by adding the resources needed by all tasks started, and subtracting the resources needed by all tasks finished	\\
-(25) Sets an asset to be online if it installed and had work done on it recently \\
-(26) Counts how many assets are online \\
-(27) Sets a limit on the amount of vessels that can be charatered in a given period
+(15) Objective function, sums up profits from energy made, subtracts money used on resources (vessels), and multiplies it all with a discount factor	\\
+(16) Makes every task that is started stay started 	\\
+(17) Forces every installation and mandatory maintenance task to be starded and finished by the final timestep	\\
+(18) For every precedence relation $(i, j)$, ensures that $i$ is finished before $j$ is started 	\\
+(19) Counts up the resources needed in a time period by adding the resources needed by all tasks started, and subtracting the resources needed by all tasks finished	\\
+(20) Sets an asset to be online if it installed and had work done on it recently \\
+(21) Counts how many assets are online \\
+(22) Sets a limit on the amount of vessels that can be charatered in a given period
 \end{frame}
 
 \begin{frame}{Notation overview}
@@ -260,28 +219,26 @@ Sets:
 \item $IP$: All precedency pairs ($i$, $j$)
 \item $A$: All assets
 \end{itemize}
-\end{column}
 
-\hfill
-
-\begin{column}{.48\textwidth}
 Decision variables:
 \begin{itemize}
 \item $O_{t}$: Number of online turbines at timestep $t$
 \item $o_{at}$: Binary variable, 1 if asset $a$ is online at timestep $t$
 \item $N_{rp}$: Number of resources $r$ used in period $p$
-\item $s_{ait}$: Binary variable, 1 if task $i \in \mathcal{I}$ for asset $a$ starts at time $t$
-\item $f_{ait}$: Binary variable, 1 if task $i \in \mathcal{I}$ for asset $a$ finishes at time $t$
+\item $s_{ait}$: Binary variable, 1 if task $i \in \mathcal{I}$ for asset $a$ has started at or before time $t$
 \end{itemize}
+\end{column}
 
+\hfill
+
+\begin{column}{.48\textwidth}
 Parameters:
 \begin{itemize}
 \item $DIS$: The discount factor per time period
 \item $v_t$: The value of energy a single turbine produces at timestep $t$
 \item $C_{rp}$: The cost of chartering resource $r$ in period $p$
-\item $d_i$: The duration of task $i \in \mathcal{I}$
 \item $\lambda_a$: The number of timesteps after the last maintenance before asset $a$ fails
-\item $\omega_{it}$: Binary parameter representing weather, 1 if task $i \in \mathcal{I}$ can be completed at time $t$, 0 otherwise
+\item $\sigma_{it}$: Indicates the timestep at which task $i$ should have been started for it to be finished by timestep $t$, taking into account the duration and the weather conditions
 \item $\rho_{ir}$: The amount of resource $r$ used for task $i \in \mathcal{I}$
 \item $m_{rp}$: The maximum amount of resources $r$ that can be charatered in period $p$
 \end{itemize}
