--- a/Model slides/models.tex
+++ b/Model slides/models.tex
@@ -107,7 +107,7 @@ subject to:
 s_{ait} \leq& s_{ai(t+1)}													&	\forall a \in A, \forall i \in M, \forall t \in T	\\
 s_{ai\sigma_{it_N}} \geq& 1												&	\forall a \in A, \forall i \in M^M			\\		
 N_{rp} \geq& \sum_{a\in A} \sum_{i\in M} (\rho_{ir} \cdot (s_{ait} - s_{ai\sigma{it}})) 			& 	\forall r \in R, \forall p \in P, \forall t \in T_p 	\\
-b_{at} >&  \sum_{i \in M} [s_{ai(t - \lambda_a)} - s_{ait}]								&	\forall a \in A, \forall t \in T 			\\
+b_{at} >&  \sum_{i \in M} [s_{ai\sigma_{i(t - \lambda_a)}} - s_{ai\sigma_{it}}]					&	\forall a \in A, \forall t \in T 			\\
 O_t =&  |A| - \sum_{a \in A} b_{at}											&	\forall t \in T 						\\
 N_{rp} \leq& m_{rp}													&	 \forall r \in R, \forall p \in P
 \end{align}
@@ -180,13 +180,13 @@ Parameters:
 subject to:
 
 \begin{align}
-s_{ait} \leq& s_{ai(t+1)}													&	\forall a \in A, \forall i \in \mathcal{I}, \forall t \in T		\\
-s_{ai\sigma_{it_N}} \geq& 1												&	\forall a \in A, \forall i \in I\cup M^M				\\
-s_{ajt} \leq& s_{ai\sigma_{it}}												&	\forall a \in A, \forall (i, j) \in IP, \forall t \in T 			\\
-N_{rp} \geq& \sum_{a\in A} \sum_{i\in \mathcal{I}} (\rho_{ir} \cdot (s_{ait} - s_{ai\sigma_{it}})) 		& 	\forall r \in R, \forall p \in P, \forall t \in T_p 			\\
-o_{at} \leq& \frac{1}{2} \cdot (s_{ai_Nt} + \sum_{i \in M \cup \{i_N\}} [s_{ait} - s_{ai(t-\lambda_a)}]	& 	\forall a \in A, \forall t \in T 					\\
-O_t =& \sum_{a \in A} o_{at}												& 	\forall t \in T 								\\
-N_{rp} \leq& m_{rp}													& 	\forall r \in R, \forall p \in P
+s_{ait} \leq& s_{ai(t+1)}																	& \forall a \in A, \forall i \in \mathcal{I}, \forall t \in T	\\
+s_{ai\sigma_{it_N}} \geq& 1																& \forall a \in A, \forall i \in I\cup M^M			\\
+s_{ajt} \leq& s_{ai\sigma_{it}}																& \forall a \in A, \forall (i, j) \in IP, \forall t \in T 	\\
+N_{rp} \geq& \sum_{a\in A} \sum_{i\in \mathcal{I}} (\rho_{ir} \cdot (s_{ait} - s_{ai\sigma_{it}})) 						& \forall r \in R, \forall p \in P, \forall t \in T_p 		\\
+o_{at} \leq& \frac{1}{2} \cdot (s_{ai_N\sigma_{i_Nt}} + \sum_{i \in M \cup \{i_N\}} [s_{ai\sigma_{it}} - s_{ai\sigma_{i(t-\lambda_a)}}]	& \forall a \in A, \forall t \in T			\\
+O_t =& \sum_{a \in A} o_{at}																& \forall t \in T 						\\
+N_{rp} \leq& m_{rp}																	& \forall r \in R, \forall p \in P
 \end{align}
 
 \end{frame}
