Updated Irawan writing

--- a/Ongoing report/OngoingReport 1.1.tex
+++ b/Ongoing report/OngoingReport 1.1.tex
@@ -325,7 +325,10 @@ This sort of decomposition is potentially useful for my models, to handle the st
 A summary of research regarding Condition-Based Maintenance is given in \cite{merigaud2016condition}. This work talks in-depth about many systems available to monitor the health and potential failure rate of many components, which all operate on different levels. For example, some might simply monitor the energy output of a turbine to detect faults in any of its components, while a different system might specifically monitor the component that transforms rotational energy to electrical energy. It includes research on Tidal Turbines and Wave Energy Converters, but focuses on Wind Turbines. Since it does not talk (much) about logistics, and more about monitoring at an engineering and design level, not much of this work applies to my research, but it is a potential resource to look at if my results indicate that improved condition-tracking is useful or necessary. 
 
 \subsection{Related research regarding offshore projects} \label{ss:offsh}
-While there is not much research relating specifically to decommission projects, there is some. Especially recently there has been new research such as \cite{irawan2019optimisation}. In it the researchers use an Integer Linear Programming method to find schedules for decommission projects with minimum costs. The method is shown to be efficient and seems to yield good results. As expected, this model is fairly similar to the ones used for installation projects. 
+%ONGOING: Updated this after reading (2 paragraphs)
+While there is not much research relating specifically to decommission projects, some recent work has still been done in this field. In \cite{irawan2019optimisation} an attempt to optimise the decommissioning is made using an ILP. The model created focuses on minimising total costs, and takes many factors into account, such as both offshore and onshore logistics, components that can be sold and components that can be recycled. This broadness means the model is more accurate, but it also means they were not able to solve the exact problem. For this reason they tried various relaxations, and proposed a matheuristic method in which some integer constraints are relaxed. They use this method to create feasible and well-performing solutions in a short time.
+
+The above research will serve as the basis for the decommission model that I will use in my research, albeit with some likely simplifications, such as the specific logistics around recycling components. The expectation that the decommission process is very similar to the installation process is also mentioned in this research; they say this will largely be the cases, but the focus is shifted. In the installation process there often are strict deadline for when some or all the turbines need to be operational; that is rarely the case in decommissioning project, which is why their objective function is based on cost rather than duration. Additionally the different destinations for different components can bring an extra level of complexity; in the installation all components need to move from the ports to the windfarm, in the decommission some components move from the farm to recycling ports, other to regular ports from which they are transported inland, etc. 
 
 \bigskip
 
