Added Lacal paper to sheet and report

--- a/Ongoing report/mybib.bib
+++ b/Ongoing report/mybib.bib
@@ -460,3 +460,13 @@
   year={2015},
   publisher={Elsevier}
 }
+
+@article{lacal2018offshore,
+  title={Offshore wind installation: Analysing the evidence behind improvements in installation time},
+  author={Lacal-Ar{\'a}ntegui, Roberto and Yusta, Jos{\'e} M and Dom{\'\i}nguez-Navarro, Jos{\'e} Antonio},
+  journal={Renewable and Sustainable Energy Reviews},
+  volume={92},
+  pages={133--145},
+  year={2018},
+  publisher={Elsevier}
+}
