--- a/Ongoing report/OngoingReport 1.1.tex
+++ b/Ongoing report/OngoingReport 1.1.tex
@@ -202,7 +202,7 @@ The exact manner in which simulation and optimisation are combined depends on th
 In this section I will give an overview of the literature I have read to-date for this research. I will discuss some actual attempts to produce a schedule for the installation problem in \Cref{ss:sched}, and research on the maintenance of the site will be shown in \Cref{ss:maint}. Other research related to offshore projects is shown in \Cref{ss:offsh}. Some other studies to do with uncertain scheduling will be highlighted in \Cref{ss:stoch}.  
 
 \subsection{Scheduling the installation} \label{ss:sched}
-Here I will take an in-depth look into two papers that use comparable methods to look at the issue of producing an efficient schedule, and discuss their strenghts, weaknesses, and difference.
+Here I will take an in-depth look into two papers that use comparable methods to look at the issue of producing an efficient schedule, and discuss their strengths, weaknesses, and difference.
 
 \bigskip
 
@@ -329,6 +329,12 @@ A summary of research regarding Condition-Based Maintenance is given in \cite{me
 While there is not much research relating specifically to decommission projects, some recent work has still been done in this field. In \cite{irawan2019optimisation} an attempt to optimise the decommissioning is made using an ILP. The model created focuses on minimising total costs, and takes many factors into account, such as both offshore and onshore logistics, components that can be sold and components that can be recycled. This broadness means the model is more accurate, but it also means they were not able to solve the exact problem. For this reason they tried various relaxations, and proposed a matheuristic method in which some integer constraints are relaxed. They use this method to create feasible and well-performing solutions in a short time.
 
 The above research will serve as the basis for the decommission model that I will use in my research, albeit with some likely simplifications, such as the specific logistics around recycling components. The expectation that the decommission process is very similar to the installation process is also mentioned in this research; they say this will largely be the cases, but the focus is shifted. In the installation process there often are strict deadline for when some or all the turbines need to be operational; that is rarely the case in decommissioning project, which is why their objective function is based on cost rather than duration. Additionally the different destinations for different components can bring an extra level of complexity; in the installation all components need to move from the ports to the windfarm, in the decommission some components move from the farm to recycling ports, other to regular ports from which they are transported inland, etc. 
+
+\bigskip
+
+%ONGOING: Added
+%TODO: Quote this paper when talking about improvements in an introduction
+In the last two decades the the installation time has generally decreased, as analysed in \cite{lacal2018offshore}. This work looks at the installation times of the foundations of a windfarm, the installation times of the turbines, and the overall installation times. It observes a 22\% time decrease per turbine between the periods of 2000 to 2003, and 2016 to 2017. This improvement is more impressive when you consider the distance from the shore has increased in that time. However, the true scale of the improvement only becomes clear when you look at the time per megawatt; this reveals a 71\% time reduction within this timeframe. This is a very substantial reduction, and one that shows the potential of large windfarms with many turbines that are located far off the shore. The specific causes of this improvement are not investigated much, so it is unclear whether this improvement mainly comes from the components used, or the logistics of installation, or some other cause. Investigating this is noted as future research. 
 
 \bigskip
 
